--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,6 +1,7 @@
 @import "~bootstrap/scss/bootstrap";
 @import "~@fortawesome/fontawesome-free/css/all.min.css";
 @import url('https://fonts.googleapis.com/css2?family=Satisfy&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@300&display=swap');
 
 body {
   background-color: white;
@@ -30,7 +31,7 @@ header {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-family: 'Times New Roman', Times, serif;
+  font-family:'Times New Roman', Times, serif;
   height: 688px;
   color: Black;
   background-color: #f0f0f0;
@@ -43,14 +44,27 @@ header h2 {
   font-size: 50px;
 }
 
-img {
-  height: 120px;
+ header img {
+  height: 140px;
 }
 
 #bioPage {
-  font-family: 'Times New Roman', Times, serif;
-  padding: 20px;
-  font-size: 18px;
+  font-family: 'Raleway', sans-serif;
+  font-size: 22px;
+  height: 500px;
+  display: flex;
+  color: white;
+  background-color: black;
+  padding-left: 24px;
+}
+
+#bioPage p {
+  margin: auto;
+  width: 75%
+}
+
+#bioPage img {
+  padding: 24px;
 }
 
 #technologiesPage ul {
