--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -127,6 +127,12 @@ header h2 {
   text-align: center;
 }
 
+#projectsPage h2 {
+  font-size: 40px;
+  padding-top: 30px;
+  padding-bottom: 50px;
+}
+
 #projects {
   display: flex;
   flex-flow: row wrap;
